<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/media_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/mediaTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/media_title_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="@dimen/close_button_size"
            android:layout_height="@dimen/close_button_size"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_close_24"
            app:layout_constraintBottom_toTopOf="@+id/mediaImage"
            app:layout_constraintEnd_toEndOf="@+id/mediaImage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mediaImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:minHeight="@dimen/landscape_image_width"
            android:transitionName="@string/image_transition"
            app:layout_constraintBottom_toTopOf="@+id/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mediaTitle"
            tools:ignore="UnusedAttribute" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/genre"
            app:layout_constraintEnd_toEndOf="@+id/mediaImage"
            app:layout_constraintStart_toStartOf="@+id/mediaImage"
            app:layout_constraintTop_toBottomOf="@+id/mediaTitle" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:textSize="@dimen/media_body_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mediaImage"
            tools:text="@string/genre" />

        <TextView
            android:id="@+id/runningTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:textSize="@dimen/media_body_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            tools:text="@string/running_time" />

        <TextView
            android:id="@+id/vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:textSize="@dimen/media_body_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/runningTime"
            tools:text="@string/vote_average" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>