<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/latestMovieFrame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/latestMovieImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/latest"
                        android:minHeight="@dimen/landscape_image_width" />

                    <ProgressBar
                        android:id="@+id/latestMovieProgressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="@+id/mediaImage"
                        app:layout_constraintEnd_toEndOf="@+id/mediaImage"
                        app:layout_constraintStart_toStartOf="@+id/mediaImage"
                        app:layout_constraintTop_toTopOf="@+id/mediaImage" />
                </FrameLayout>


                <TextView
                    android:id="@+id/nowPlayingCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/media_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/now_playing"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/category_text"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/nowPlayingRecyclerView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nowPlayingRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie" />


                <TextView
                    android:id="@+id/popularCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/media_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/popular"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/category_text"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/popularRecyclerView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popularRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie" />


                <TextView
                    android:id="@+id/topRatedCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/media_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/top_rated"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/category_text"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topRatedRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie" />


                <TextView
                    android:id="@+id/upcomingCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/media_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/upcoming"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/category_text"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcomingRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/media_margin"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie" />
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/emptyList"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_results"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>